<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Onboarding.Onboarding2Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="185dp"
            android:gravity="center">

            <Button
                style="@style/GenreButton"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/happy"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/sad"
                android:textSize="11sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/angry"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/shock"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_marginTop="-8dp"
            android:gravity="center">

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/tense"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/bored"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/nervous"
                android:textSize="11sp"
                tools:ignore="TextSizeCheck" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/cheerful"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout3"
            android:layout_marginTop="-8dp"
            android:gravity="center">

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/calm"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/joyful"
                android:textSize="11sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/relaxed"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/jealous"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout4"
            android:layout_marginTop="-8dp"
            android:gravity="center">

            <Button
                style="@style/GenreButtonHighlighted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/amused"
                android:textColor="#000000"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/worried"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/motivated"
                android:textSize="11sp" />
        </LinearLayout>

        <TextView
            android:layout_width="258dp"
            android:layout_height="143dp"
            android:layout_above="@+id/button"
            android:layout_below="@+id/linearLayout5"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="105dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="38dp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/recommendation"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="23sp"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="56dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/next"
            android:textColor="#FFFFFF"
            android:textFontWeight="600"
            android:textSize="23sp" />

    </RelativeLayout>

</FrameLayout>