<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding2Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="16dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/skip"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="185dp"
            android:gravity="center">

            <Button
                style="@style/GenreButton"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/action"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/adventure"
                android:textSize="11sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/adventure"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/drama"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_marginTop="-8dp"
            android:gravity="center">

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/comedy"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/crime"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/documentary"
                android:textSize="11sp"
                tools:ignore="TextSizeCheck" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/sports"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout3"
            android:layout_marginTop="-8dp"
            android:gravity="center">

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/fantasy"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/horror"
                android:textSize="11sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/music"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/western"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout4"
            android:layout_marginTop="-8dp"
            android:gravity="center">

            <Button
                style="@style/GenreButtonHighlighted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/horror"
                android:textColor="#000000"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/thriller"
                android:textSize="11sp" />

            <Button
                style="@style/GenreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/sci_fi"
                android:textSize="11sp" />
        </LinearLayout>

        <TextView
            android:layout_width="258dp"
            android:layout_height="143dp"
            android:layout_above="@+id/button"
            android:layout_below="@+id/linearLayout5"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="105dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="38dp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/onboarding2"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="23sp"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="102dp"
            android:backgroundTint="#FF0000"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/next"
            android:textColor="#FFFFFF"
            android:textFontWeight="600"
            android:textSize="23sp" />

    </RelativeLayout>

</FrameLayout>