<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">

    <Button
        android:id="@+id/btn_logout"
        android:text="@string/logout"
        android:fontFamily="@font/poppinsbold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        style="@style/TextColor"
        android:drawableLeft="@drawable/baseline_arrow_back"
        android:paddingStart="1dp"
        android:textSize="16sp"
        android:background="@drawable/button_rectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/textHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_logout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/greetingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="Hi, "
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:layout_toEndOf="@id/greetingText"
            android:layout_marginStart="2dp"
            android:text="Username"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/signupSuccessTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHello"
        android:fontFamily="@font/poppinsbold"
        android:layout_marginStart="16dp"
        android:text="@string/sign_up_successfully"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/signupSuccessSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginStart="16dp"
        android:layout_below="@id/signupSuccessTitle"
        android:text="@string/tell_us_more_about_you"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupSuccessSubtitle"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:fontFamily="@font/poppinsregular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameInputLayout"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/your_phone_number"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneInputLayout"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cityEditText"
            android:fontFamily="@font/poppinsregular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_city"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_rectangle"
        style="@style/TextColor"
        android:fontFamily="@font/poppinsbold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_continue"
        android:textSize="18sp" />

</RelativeLayout>
